--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -71,7 +71,13 @@ header.wp-block-template-part {
   background-color: #FFF;
   position: relative;
   z-index: 1000;
-  height: 85px;
+  height: 100px;
+  .siteHeaderInner {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
   .wp-block-group-is-layout-constrained {
     position: relative;
   }
@@ -83,7 +89,7 @@ header.wp-block-template-part {
       display: block;
       background: $primary;
       color: #FFF;
-      padding: 30px 35px;
+      padding: 25px;
     }
     @media screen and (max-width:1300px) {
       img {
@@ -96,7 +102,7 @@ header.wp-block-template-part {
   .wp-block-group.alignwide {
     max-width: $wrapper;
     width: 100%;
-    height: 85px;
+    height: 100%;
     position: relative;
     margin: 0;
     // padding: 20px 0 20px 310px!important;
@@ -201,13 +207,15 @@ header.wp-block-template-part {
       width: 150px;
       height: 85px;
       background: transparent;
+      position: relative;
+      top: 8px;
     }
   }
 }
 
 h2.wp-block-heading {
   font-family: $font_primary;
-  font-weight: 600;
+  font-weight: bold;
   font-size: 42px;
 }
 body.logged-in.admin-bar {
@@ -225,13 +233,13 @@ body.logged-in.admin-bar {
 
 .hero {
   p.has-large-font-size {
-    font-size: 1.6rem!important;
+    font-size: 2.2em!important;
     font-weight: 500;
   }
   h2.wp-block-heading {
     margin-top: 0!important;
-    font-size: 3rem;
-    font-weight: 500;
+    font-size: 3.6em;
+    font-weight: bold;
     line-height: 1.1;
   } 
   .wp-block-cover__inner-container {
@@ -241,13 +249,13 @@ body.logged-in.admin-bar {
 
 .wp-block-group.intro {
   color: $blue;
-  max-width: 800px;
-  width: 100%;
+  // max-width: 800px;
+  // width: 100%;
   margin: 0 auto;
   .wp-block-heading {
     color: $blue;
     font-size: 42px;
-    font-weight: 600;
+    font-weight: bold;
     line-height: 1.2;
   }
 }
@@ -313,7 +321,7 @@ body.logged-in.admin-bar {
     h2 {
       margin: 0 0 20px;
       font-size: 42px;
-      font-weight: 500;
+      font-weight: 600;
       line-height: 1.2;
     }
     h3 {
@@ -984,7 +992,7 @@ footer.wp-block-template-part {
     }
     h3 {
       font-size: 1.3em!important;
-      font-weight: 600!important;
+      font-weight: bold!important;
       line-height: 1.2;
       margin: 0 0;
     }
@@ -996,13 +1004,16 @@ footer.wp-block-template-part {
     height: 10vw;
     margin: 0 auto;
     z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     .wp-block-image {
       padding: 0;
-      position: absolute;
-      top: 10%;
-      left: 10%;
-      width: 80%;
-      height: 80%;
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 70%;
+      height: 70%;
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
@@ -1078,6 +1089,9 @@ footer.wp-block-template-part {
 }
 
 body:not(.home) {
+  h1.wp-block-post-title {
+    display: none;
+  }
   .wp-block-cover.hero {
     .wp-block-cover__inner-container {
       max-width: 900px;
@@ -1119,6 +1133,15 @@ body:not(.home) {
       height: auto;
     }
   }
+  @media screen and (max-width:960px) {
+    .footerInner {
+      gap: 0;
+      flex-wrap: wrap;
+      img {
+        padding: 10px;
+      }
+    }
+  }
 }
 
 .FOOTER_NAV {
@@ -1140,6 +1163,15 @@ body:not(.home) {
   }
   br {
     display: none;
+  }
+  @media screen and (max-width:960px) {
+    .footerInner {
+      gap: 0;
+      flex-wrap: wrap;
+      a {
+        margin: 5px 8px;
+      }
+    }
   }
 }
 
