--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -59,6 +59,14 @@ strong {
     opacity: 1;
   }
 }
+
+.wrapper {
+  max-width: 1340px;
+  width: 100%;
+  margin:0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 section.wp-block-template-part {
   display: none;
 }
@@ -1063,6 +1071,172 @@ footer.wp-block-template-part {
     .wp-block-group.icon {
       width: 110px;
       height: 110px;
+    }
+  }
+}
+
+main.wp-block-group.wp-flexible-content {
+  margin-top: 0!important;
+  padding-top: 0!important;
+}
+.repeatable-hero  {
+  position: relative;
+  min-height: 530px;
+  @media screen and (max-width:820px) {
+    min-height: 430px;
+  }
+  .hero-image {
+    height: 100%;
+    left: 0;
+    margin: 0;
+    max-height: none;
+    max-width: none;
+    object-fit: cover;
+    outline: none;
+    padding: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+  }
+  .heroText {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    text-align: center;
+    h1 {
+      font-size: 5rem;
+      font-weight: 500;
+      line-height: 1.2;
+      letter-spacing: .05em;
+      text-transform: uppercase;
+      margin: 0 0 0;
+      color: #FFF;
+    }
+  }
+  .overlay-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #051027;
+    opacity: 0.6;
+    z-index: 2;
+  }
+}
+.repeatable-intro {
+  color: $blue;
+  text-align: center;
+  h2, p {
+    color: $blue;
+  }
+  h2 {
+    margin: 0 0;
+  }
+  .wrapper {
+    max-width: 1000px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  } 
+}
+.repeatable-columns {
+  margin: 30px 0;
+  .rcolumns {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  .rcolumn {
+    width: 33.333%;
+    padding: 20px;
+    margin: 50px 0;
+    @media screen and (max-width:960px) {
+      width: 50%;
+    }
+    @media screen and (max-width:768px) {
+      width: 100%;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+    .inside {
+      padding: 20px;
+      background: #FAF3D6;
+      color: $primary;
+      height: 100%;
+      text-align: center;
+    }
+    .coltitle {
+      margin: 0 0;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 1.2;
+    }
+    .text {
+      font-size: 16px;
+      margin: 20px 0;
+    }
+    .icondiv {
+      width: 10vw;
+      height: 10vw;
+      position: relative;
+      margin: -6vw auto 30px;
+      @media screen and (max-width: 960px) {
+        width: 100px;
+        height: 100px;
+        margin-top: -70px;
+      }
+      span {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        transform: scale(0.75);
+      }
+    }
+    .morelink {
+      a {
+        display: inline-block;
+        padding: 5px 17px 5px 10px;
+        position: relative; 
+        color: $primary!important;
+        text-decoration: underline;
+        font-size: 15px;
+        line-height: 1.2;
+        &:after {
+          content: "";
+          display: inline-block;
+          width: 0;
+          height: 0;
+          border-left: 8px solid $primary;
+          border-top: 5px solid transparent;
+          border-bottom: 5px solid transparent;
+          position: absolute;
+          top: 9px;
+          right: 0;
+          transition: transform ease .3s;
+        }
+        &:hover, &:focus {
+          color: $secondary!important;
+          &:after {
+            border-left-color: $secondary!important;
+            transform: translateX(3px);
+          }
+        }
+      }
     }
   }
 }
