Styled repeatable blocks

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1099,6 +1099,12 @@ main.wp-block-group.wp-flexible-content {
     top: 0;
     width: 100%;
   }
+  .sm-title {
+    font-size: 1.4em;
+    font-weight: 500;
+    line-height: 1.3;
+    color: #FFF;
+  }
   .heroText {
     position: absolute;
     top: 0;
