--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -59,6 +59,43 @@ strong {
     opacity: 1;
   }
 }
+header.wp-block-template-part .wp-block-site-logo {
+  visibility: hidden;
+  transition: all ease .3s;
+  &.customized {
+    visibility: visible;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+    animation-name: fadeInDown;
+  }
+}
+body.home {
+  header.wp-block-template-part .wp-block-site-logo {
+    width: 240px;
+    a, img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+body:not(.home) {
+  header.wp-block-template-part .wp-block-site-logo {
+    top: 0;
+    height: 100%;
+    a {
+      background: transparent;
+      padding: 0 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      img {
+        width: 265px;
+      }
+    }
+  }
+}
 
 .wrapper {
   max-width: 1340px;
@@ -93,6 +130,7 @@ header.wp-block-template-part {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 20;
     a {
       display: block;
       background: $primary;
@@ -183,11 +221,12 @@ header.wp-block-template-part {
   .wp-block-site-logo * {
     transition: all ease .3s;
   }
-  &.siteHeader.sticky {
+  &.sticky {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    height: 80px;
     z-index: 100;
     background: #FFF;
     box-shadow: 0 5px 15px rgba(0,0,0,.11);
@@ -201,11 +240,11 @@ header.wp-block-template-part {
       z-index: 50;
       img {
         max-width: unset;
-        width: 205px!important;
+        width: 180px!important;
         height: auto;
         position: relative;
-        top: 10px;
-        left: -35px;
+        top: 3px;
+        left: -13px;
       }
     }
     a.custom-logo-link {
@@ -396,6 +435,29 @@ body.logged-in.admin-bar {
       }
       .imagecol {
         margin-top: 40px;
+      }
+    }
+  }
+}
+
+body:not(.home) {
+  header.wp-block-template-part.sticky {
+    .wp-block-site-logo {
+      width: auto;
+      height: 100%;
+    }
+    a.custom-logo-link {
+      width: 70%;
+      height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      top: 0;
+      img {
+        top: 0;
+        left: 0;
+        width: 100%!important;
+        transition: all ease .3s;
       }
     }
   }
@@ -1155,16 +1217,22 @@ main.wp-block-group.wp-flexible-content {
 }
 .repeatable-columns {
   margin: 30px 0;
+  padding-top: 30px;
   .rcolumns {
     display: flex;
     flex-wrap: wrap;
     margin-left: -20px;
     margin-right: -20px;
+    margin-top: -50px;
+    margin-bottom: -50px;
   }
   .rcolumn {
     width: 33.333%;
     padding: 20px;
     margin: 50px 0;
+    @media screen and (min-width:1300px) {
+      margin-bottom: 70px;
+    }
     @media screen and (max-width:960px) {
       width: 50%;
     }
@@ -1242,6 +1310,88 @@ main.wp-block-group.wp-flexible-content {
             transform: translateX(3px);
           }
         }
+      }
+    }
+  }
+}
+
+.repeatable-image-text-block {
+  margin-top: 10px;
+  margin-bottom: 60px;
+  .flexwrap {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .inner-block {
+    padding: 30px;
+    @media screen and (min-width:1400px) {
+      padding: 3.5vw;
+    }
+  }
+  .imageCol, .textCol  {
+    width: 100%;
+  }
+  .imageCol {
+    margin: 0 0 30px;
+    img {
+      width: 100%;
+      height: auto;
+      float: left;
+    }
+  }
+  h2.item-title {
+    color: #FFF;
+    font-size: 2.2em;
+    font-weight: 500;
+    line-height: 1.2;
+    margin: 0 0 20px;
+  }
+  p {
+    color: #FFF;
+  }
+  .item-link {
+    margin-top: 30px;
+    a {
+      display: inline-block;
+      text-decoration: none;
+      position: relative;
+      color: #FFF;
+      font-weight: 500;
+      letter-spacing: 0.02em;
+      border-bottom: 1px solid #FFF;
+      &:after {
+        content: "";
+        display: inline-block;
+        width: 0;
+        height: 0;
+        border-left: 8px solid #FFF;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        position: absolute;
+        top: 6px;
+        right: -15px;
+        transition: transform ease .3s;
+      }
+      &:hover, &:focus {
+        color: $yellow;
+        border-bottom-color: $yellow;
+        &:after {
+          border-left-color: $yellow;
+          transform: translateX(3px);
+        }
+      }
+    }
+  }
+  .flexwrap.half {
+    @media screen and (min-width: 800px) {
+      justify-content: space-between;
+      .imageCol {
+        width: 40%;
+        margin-bottom: 0;
+      }
+      .textCol {
+        width: 55%;
       }
     }
   }
