--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1322,6 +1322,7 @@ main.wp-block-group.wp-flexible-content {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    position: relative;
   }
   .inner-block {
     padding: 30px;
@@ -1392,6 +1393,68 @@ main.wp-block-group.wp-flexible-content {
       }
       .textCol {
         width: 55%;
+      }
+    }
+  }
+
+  &.block-type-wide {
+    &.img_right {
+      .flexwrap.half {
+        @media screen and (min-width: 800px) {
+          flex-direction: row-reverse;
+        }
+      }
+    }
+  }
+
+  &.block-type-full {
+    .inner-block {
+      padding: 0 0;
+    }
+    .imageCol {
+      margin-bottom: 0;
+    }
+    .textCol {
+      padding: 30px 20px 40px;
+    }
+    .flexwrap.half {
+      overflow: hidden;
+      @media screen and (min-width: 800px) {
+        justify-content: flex-end;
+        min-height: 450px;
+        .imageCol, .textCol {
+          width: 50%;
+        }
+        .imageCol {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          img {
+            object-fit: cover;
+            object-position: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .textCol {
+          padding: 5vw 4vw;
+        }
+      }
+    }
+
+    &.img_right {
+      .flexwrap.half {
+        @media screen and (min-width: 800px) {
+          flex-direction: row-reverse;
+          .imageCol {
+            left: unset;
+            right: 0;
+          }
+        }
       }
     }
   }
