Updated styling on ACF Repeatable blocks

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1207,6 +1207,10 @@ main.wp-block-group.wp-flexible-content {
     color: $blue;
   }
   h2 {
+    color: $blue;
+    font-size: 42px;
+    font-weight: bold;
+    line-height: 1.2;
     margin: 0 0;
   }
   .wrapper {
@@ -1247,6 +1251,12 @@ main.wp-block-group.wp-flexible-content {
       color: $primary;
       height: 100%;
       text-align: center;
+      @media screen and (min-width:1300px) {
+        padding: 20px 3vw 3vw;
+      }
+      @media screen and (min-width:1400px) {
+        padding: 20px 5vw 3vw;
+      }
     }
     .coltitle {
       margin: 0 0;
@@ -1262,7 +1272,7 @@ main.wp-block-group.wp-flexible-content {
       width: 10vw;
       height: 10vw;
       position: relative;
-      margin: -6vw auto 30px;
+      margin: -6vw auto 40px;
       @media screen and (max-width: 960px) {
         width: 100px;
         height: 100px;
@@ -1289,6 +1299,7 @@ main.wp-block-group.wp-flexible-content {
         color: $primary!important;
         text-decoration: underline;
         font-size: 15px;
+        font-weight: 500;
         line-height: 1.2;
         &:after {
           content: "";
@@ -1343,8 +1354,8 @@ main.wp-block-group.wp-flexible-content {
   }
   h2.item-title {
     color: #FFF;
-    font-size: 2.2em;
-    font-weight: 500;
+    font-size: 42px;
+    font-weight: bold;
     line-height: 1.2;
     margin: 0 0 20px;
   }
