Updated styling on ACF Repeatable blocks

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1657,7 +1657,7 @@ body:not(.home) {
   }
 }
 
-p.button-arrow a,
+.button-arrow a,
 a.button-arrow {
   display: inline-block;
   padding: 5px 17px 5px 10px;
