--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -521,7 +521,9 @@ h6 {font-size: 28px;}
     }
   }
   @media screen and (max-width: 600px) {
-    max-width: 260px;
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
   }
 }
 .wp-block-columns.involved {
@@ -952,6 +954,27 @@ h6 {font-size: 28px;}
       color: #FFF;
     }
   }
+
+  @media screen and (max-width: 820px) {
+    &:before {
+      left: -27%;
+    }
+    &:after {
+      right: -27%;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    &:before {
+      left: -70vw;
+    }
+    &:after {
+      right: -70vw;
+    }
+    .flexwrap .textwrap {
+      font-size: 1.5em;
+    }
+  }
 }
 
 .wp-social-link {
@@ -1024,9 +1047,11 @@ footer.site-footer {
         height: auto;
       }
       @media screen and (max-width:960px) {
-        display: block;
+        // display: block;
+        flex-wrap: wrap;
+        gap: 0;
         img {
-          margin: 5px 10px;
+          margin: 10px 10px;
         }
       }
     }
@@ -1061,6 +1086,12 @@ footer.site-footer {
       }
     }
   }
+
+  @media screen and (max-width: 960px) {
+    ul.menu {
+      flex-wrap: wrap;
+    }
+  }
 }
 
 .footer-contact-info {
@@ -1088,6 +1119,7 @@ footer.site-footer {
   span {
     display: inline-block;
     padding: 5px 25px;
+    position: relative;
     i {
       margin-right: 5px;
     }
@@ -1113,6 +1145,21 @@ footer.site-footer {
         outline: 1px dotted $yellow;
         &:after {
           opacity: 0;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 960px) {
+    .footerInner span {
+      position: relative;
+      i {
+        position: absolute;
+        top: 8px;
+        left: 0;
+        margin-right: 0;
+        &.fa-location-dot {
+          left: 5px;
         }
       }
     }
@@ -1233,6 +1280,9 @@ footer.site-footer {
       text-transform: uppercase;
       margin: 0 0 0;
       color: #FFF;
+      @media screen and (max-width:960px) {
+        font-size: 3.5rem;
+      }
     }
   }
   .overlay-background {
@@ -1538,11 +1588,147 @@ body:not(.home) {
       }
     }
   }
+
+  #main h1.page-title {
+    display: none;
+  }
+  &:not(.has-hero) {
+    #main  h1.page-title {
+      display:block;
+      color: $primary;
+      font-size: 3rem;
+      font-weight: 600;
+      line-height: 1.2;
+      margin: 0 0;
+    }
+  }
+
+  &.page-template-default {
+    .subpage-banner {
+      position: relative;
+      min-height: 400px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #051027;
+        opacity: 0.6;
+      }
+      .bannerText {
+        max-width: $wrapper;
+        width: 100%;
+        margin:0 auto;
+        position: relative;
+        z-index: 10;
+        text-align:center;
+      }
+      h1 {
+        font-size: 5rem;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: .02em;
+        text-transform: uppercase;
+        margin: 0;
+        color: #FFF;
+        @media screen and (max-width:960px) {
+          font-size: 3.5rem;
+        }
+      }
+    }
+
+    #main {
+      max-width: calc($wrapper + 60px);
+      width: 100%;
+      margin: 0 auto;
+      padding: 60px 20px;
+    }
+
+    .gform_wrapper {
+      input[type="text"],
+      input[type="email"],
+      input[type="tel"],
+      input[type="number"],
+      select, textarea {
+        border: 1px solid #000;
+        font-size: 18px;
+        padding: 8px 15px!important;
+        border-radius: 0;
+        height: 40px;
+        transition: all ease .3s;
+        &:focus {
+          outline: 0;
+          border-color: $secondary;
+          box-shadow: 0 3px 8px rgba($secondary,0.1);
+        }
+      }
+      [type="checkbox"] {
+        margin: 0 0!important;
+      }
+      li.gchoice {
+        position: relative;
+        [type="checkbox"] {
+          visibility: hidden;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+        label {
+          position: relative;
+          padding-left: 23px;
+          &:before {
+            content:"";
+            display: block;
+            width: 15px;
+            height: 15px;
+            border: 1px solid #000;
+            position: absolute;
+            top: 2px;
+            left: 0;
+          }
+          &:after {
+            content: "";
+            display: none;
+            width: 6px;
+            height: 10px;
+            border-right: 2px solid #FFF;
+            border-bottom: 2px solid #FFF;
+            position: absolute;
+            top: 3px;
+            left: 5px;
+            transform: rotate(45deg);
+          }
+        }
+        [type="checkbox"]:checked + label:before {
+          background: #47ae34;
+          border-color: #47ae34;
+        }
+        [type="checkbox"]:checked + label:after {
+          display:block;
+        }
+      }
+
+      .gform_button {
+        cursor: pointer;
+        @include roundedButton($secondary);
+      }
+    }
+  }
 }
+
+
 
 body.logged-in.admin-bar {
   header.site-header.sticky {
     top: 31px;
+    @media screen and (max-width: 782px) {
+      top: 0;
+    }
   }
 }
 
@@ -1702,7 +1888,32 @@ body.logged-in.admin-bar {
       font-size: 2.3em;
     }
   }
+
+  body.home .site-header.sticky .site-logo {
+    width: 95px;
+    .logo-shrink {
+      top: 2px;
+    }
+  }
+
+  body:not(.home) .site-header.sticky {
+    img.logo-shrink {
+      display: none;
+    }
+    img.logo-full {
+      display: block;
+    }
+  }
 }
+
+@media screen and (max-width: 768px) {
+  body:not(.home) {
+    .site-header .site-logo {
+      width: 220px;
+    }
+  }
+}
+
 @keyframes NavSlideIn {
   from {
     right: 0;
