--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1371,8 +1371,8 @@ footer.site-footer {
       position: relative;
       margin: -6vw auto 40px;
       @media screen and (max-width: 960px) {
-        width: 100px;
-        height: 100px;
+        width: 160px;
+        height: 160px;
         margin-top: -70px;
       }
       span {
@@ -1418,6 +1418,24 @@ footer.site-footer {
             transform: translateX(3px);
           }
         }
+      }
+    }
+
+    &.feat-image {
+      .icondiv {
+        width: 15vw;
+        height: 15vw;
+        span {
+          transform: none;
+        }
+        @media screen and (max-width:960px) {
+          width: 230px;
+          height: 230px;
+        } 
+      }
+      @media screen and (min-width: 1300px) {
+        margin-bottom: 80px;
+        margin-top: 80px;
       }
     }
   }
