--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -292,6 +292,11 @@ h6 {font-size: 28px;}
     font-weight: bold;
     line-height: 1.2;
   }
+  .wp-block-group__inner-container {
+    max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 
 .rounded-images {
