--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1331,6 +1331,10 @@ footer.site-footer {
     padding-top: 50px;
     padding-bottom: 50px;
   } 
+  .textwrap p:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
 }
 .repeatable-columns {
   margin: 30px 0;
@@ -1613,6 +1617,79 @@ footer.site-footer {
     }
   }
 }
+
+.repeatable-fullwidth-text-block {
+  margin: 10px 0 110px;
+  .wrapper {
+    text-align: center;
+    color: #FFF;
+    font-size: 20px;
+    line-height: 1.5;
+  }
+  .inside {
+    padding: 50px 20px 40px;
+    @media screen and (min-width:1300px) {
+      padding: 4vw 5vw;
+    }
+    p:last-child {
+      margin-bottom: 0;
+      padding-bottom: 0;
+    }
+  }
+  h2 {
+    margin-top: 0;
+    margin-bottom: 0.5em;
+    font-size: 35px;
+  }
+  ul {
+    margin: 0 0;
+    padding: 0 0;
+    list-style:none;
+    text-align: left;
+    column-count: 2;  
+  }
+  ul > li {
+    position: relative;
+    page-break-inside: avoid;           /* Theoretically FF 20+ */
+    break-inside: avoid-column;         /* Chrome, Safari, IE 11 */
+    display:table;    
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    border-bottom: 1px solid rgba(#F8F5D6,0.5); 
+    &:before {
+      content: "";
+      display: block;
+      width: 10px;
+      height: 18px;
+      border-bottom: 3px solid #f8f5d6;
+      border-right: 3px solid #f8f5d6;
+      position: absolute;
+      top: 24px;
+      left: 20px;
+      transform: rotate(42deg);
+    }
+  }
+
+  div.checklist {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    ul {
+      display: block;
+      column-count: 1;
+      width: 46%;
+      @media screen and (max-width: 820px) {
+        width: 100%;
+      }
+    }
+  }
+}
+
+
 
 body:not(.home) {
   .site-header {
