--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1672,6 +1672,36 @@ footer.site-footer {
     }
   }
 
+  div.ChecklistWrap {
+    column-count: 2;
+    p {
+      position: relative;
+      page-break-inside: avoid;           /* Theoretically FF 20+ */
+      break-inside: avoid-column;         /* Chrome, Safari, IE 11 */
+      display:table;    
+      width: 100%;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      padding-left: 50px;
+      border-bottom: 1px solid rgba(#F8F5D6,0.5); 
+      margin: 0 0;
+      text-align: left;
+      &:before {
+        content: "";
+        display: block;
+        width: 10px;
+        height: 18px;
+        border-bottom: 3px solid #f8f5d6;
+        border-right: 3px solid #f8f5d6;
+        position: absolute;
+        top: 24px;
+        left: 20px;
+        transform: rotate(42deg);
+      }
+      
+    }
+  }
+
   div.checklist {
     display: flex;
     flex-wrap: wrap;
