Styled repeatable 2-column block

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1336,6 +1336,42 @@ footer.site-footer {
     padding-bottom: 0;
   }
 }
+
+a.link-arrow {
+  display: inline-block;
+  text-decoration: none;
+  position: relative;
+  color: #FFF;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  border-bottom: 1px solid #FFF;
+  &:after {
+    content: "";
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 8px solid #FFF;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    position: absolute;
+    top: 6px;
+    right: -15px;
+    transition: transform ease .3s;
+  }
+  &:hover, &:focus {
+    color: $yellow!important;
+    border-bottom-color: $yellow!important;
+    &:after {
+      border-left-color: $yellow!important;
+      transform: translateX(3px);
+    }
+  }
+}
+
+.flexwrap {
+  display: flex;
+  flex-wrap: wrap;
+}
 .repeatable-columns {
   margin: 30px 0;
   padding-top: 30px;
@@ -1717,6 +1753,100 @@ footer.site-footer {
       }
     }
   }
+
+  div.buttons {
+    margin-top: 30px;
+    text-align: center;
+    a.link-arrow {
+      margin: 6px 20px;
+      &:after {
+        top: 11px;
+      }
+    }
+  }
+}
+
+.repeatable-twocol-text-block {
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 20px;
+  margin-bottom: 70px;
+  @media screen and (min-width:1400px) {
+    padding-top: 5vw;
+    padding-bottom: 6vw;
+  }
+  .flexwrap {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &.half {
+    .textLeft, .textRight {
+      width: 46%;
+      @media screen and (max-width: 820px) {
+        width: 100%;
+      }
+    }
+  }
+  h2 {
+    font-size: 35px;
+    line-height: 1.2;
+    margin: 0 0 30px;
+  }
+  div.ChecklistWrap {
+    p {
+      position: relative;       /* Chrome, Safari, IE 11 */
+      display:table;    
+      width: 100%;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      padding-left: 50px;
+      border-bottom: 1px solid rgba(#F8F5D6,0.5); 
+      margin: 0 0;
+      text-align: left;
+      &:before {
+        content: "";
+        display: block;
+        width: 10px;
+        height: 18px;
+        border-bottom: 3px solid #f8f5d6;
+        border-right: 3px solid #f8f5d6;
+        position: absolute;
+        top: 24px;
+        left: 20px;
+        transform: rotate(42deg);
+      }
+      &:last-child {
+        padding-bottom: 0;
+        border-bottom:none!important;
+        .textRight {
+          width: 800%;
+        }
+      }
+    }
+    
+    @media screen and (max-width: 820px) {
+      margin-top: 10px;
+    }
+  }
+  
+  &.full {
+    .ChecklistWrap {
+      display: flex;
+      flex-wrap: wrap;   
+    }
+    .textLeft {
+      max-width: 1000px;
+      width: 100%;
+      margin: 0 auto;
+    }
+    .textRight {
+      max-width: 900px;
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
+
 }
 
 
