Styled repeatable 2-column block

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -469,9 +469,9 @@ h6 {font-size: 28px;}
     margin: 0 0;
     color: #FFF;
   }
-  .wp-block-cover__inner-container {
-    transform: translateY(4vw);
-  }
+  // .wp-block-cover__inner-container {
+  //   transform: translateY(4vw);
+  // }
 }
 
 .wp-block-group.alignwide {
