--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -244,6 +244,7 @@ h6 {font-size: 28px;}
   }
 }
 
+.button,
 .repeatable-button,
 .button-round {
   display: inline-block;
@@ -1677,6 +1678,9 @@ a.link-arrow {
     margin-bottom: 0.5em;
     font-size: 35px;
   }
+  h3 {
+    margin-top: 0;
+  }
   ul {
     margin: 0 0;
     padding: 0 0;
@@ -1738,22 +1742,6 @@ a.link-arrow {
     }
   }
 
-  div.checklist {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 40px;
-    ul {
-      display: block;
-      column-count: 1;
-      width: 46%;
-      @media screen and (max-width: 820px) {
-        width: 100%;
-      }
-    }
-  }
-
   div.buttons {
     margin-top: 30px;
     text-align: center;
@@ -1761,6 +1749,45 @@ a.link-arrow {
       margin: 6px 20px;
       &:after {
         top: 11px;
+      }
+    }
+  }
+}
+
+div.checklist {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  ul {
+    display: block;
+    column-count: 1;
+    width: 46%;
+    @media screen and (max-width: 820px) {
+      width: 100%;
+    }
+    li {
+      position: relative;
+      page-break-inside: avoid;           /* Theoretically FF 20+ */
+      break-inside: avoid-column;         /* Chrome, Safari, IE 11 */
+      display:table;    
+      width: 100%;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      padding-left: 50px;
+      border-bottom: 1px solid rgba(#F8F5D6,0.5); 
+      &:before {
+        content: "";
+        display: block;
+        width: 10px;
+        height: 18px;
+        border-bottom: 3px solid #f8f5d6;
+        border-right: 3px solid #f8f5d6;
+        position: absolute;
+        top: 24px;
+        left: 20px;
+        transform: rotate(42deg);
       }
     }
   }
@@ -2182,6 +2209,57 @@ body.logged-in.admin-bar {
     }
   }
 }
+
+.repeatable-flexible-blocks {
+  margin-top: 20px;
+  margin-bottom: 60px;
+  .wrapper {
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
+  .button {
+    display: inline-block;
+    margin: 5px 0;
+    padding: 14px 25px 13px !important;
+  }
+  h3 {
+    margin-bottom: 0!important;
+  }
+  div.checklist {
+    margin-top: 0!important;
+    ul.check {
+      margin-top: 0!important;
+      margin-bottom: 0!important;
+      li {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #3A5788;
+      }
+    }
+  }
+  .twocolumn {
+    padding: 20px 0;
+    .flexwrap {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    .fxcol {
+      width: 100%;
+      ul.check {
+        width: 100%;
+      }
+    }
+    &.twocol {
+      .fxcol {
+        @media screen and (min-width: 1025px) {
+          width: 48%;
+        }
+      }
+    }
+  }
+}
+
 
 @media screen and (max-width: 768px) {
   body:not(.home) {
