--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1329,7 +1329,7 @@ footer.site-footer {
   }
   .wrapper {
     max-width: 1000px;
-    padding-top: 50px;
+    padding-top: 65px;
     padding-bottom: 50px;
   } 
   .textwrap p:last-child {
@@ -2260,6 +2260,50 @@ body.logged-in.admin-bar {
   }
 }
 
+body.single-stories {
+  #main .twocol {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 80px 0;
+    .titlediv {
+      margin-bottom: 2em;
+    }
+    .fxcol {
+      width: 100%;
+      &.right {
+        @media screen and (max-width: 1023px) {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+    p:first-child {
+      margin-top: 0;
+    }
+    .fxcol.right {
+      figure {
+        margin: 0 0;
+      }
+      img {
+        width: 100%;
+        height: auto;
+      }
+      @media screen and (max-width: 1023px) {
+        margin-top: 30px;
+      }
+    }
+    @media screen and (min-width:1024px) {
+      .fxcol.left {
+        width: 50%;
+      }
+      .fxcol.right {
+        width: 45%;
+      }
+    }
+    
+  }
+}
 
 @media screen and (max-width: 768px) {
   body:not(.home) {
