--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2261,6 +2261,15 @@ body.logged-in.admin-bar {
 }
 
 body.single-stories {
+  #main h1 {
+    font-size: 2.3rem!important;
+  }
+  #main .flexwrap.full {
+    padding: 80px 0;
+    .fxcol {
+      width: 100%;
+    }
+  }
   #main .twocol {
     display: flex;
     flex-wrap: wrap;
