--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -731,11 +731,18 @@ h6 {font-size: 28px;}
     }
     .wp-block-latest-posts__featured-image {
       width: 100%;
-      padding: 0 2vw;
+      padding: 0 0;
       margin-top: -60px;
+
+      right: 2vw;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      justify-content: center;
       a {
         display: block;
-        width: 100%;
+        width: 11vw;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
