--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2271,6 +2271,12 @@ body.single-stories {
   #main h1 {
     font-size: 2.3rem!important;
   }
+  #main h2 {
+    font-size: 2.2rem!important;
+    line-height: 1.2;
+    color: $primary;
+    margin: 0 0 30px;
+  }
   #main .flexwrap.full {
     padding: 80px 0;
     .fxcol {
