--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2274,7 +2274,7 @@ body.single-stories {
   #main h2 {
     font-size: 2.2rem!important;
     line-height: 1.2;
-    color: $primary;
+    color: $primary!important;
     margin: 0 0 30px;
   }
   #main .flexwrap.full {
