Modified Stories section on the homepage and single page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -761,6 +761,7 @@ h6 {font-size: 28px;}
       padding: 0!important;
       text-decoration: underline;
       font-size: 16px;
+      font-weight: 500;
       line-height: 1.2;
       position: relative;
       color: #FFF;
@@ -952,9 +953,10 @@ h6 {font-size: 28px;}
     a {
       display: inline-block;
       text-decoration: none;
-      font-size: 16px;
-      font-weight: 500;
+      font-size: 18px;
+      font-weight: 600;
       line-height: 1.2;
+      letter-spacing: 0.03em;
       padding: 12px 30px;
       background: $secondary;
       text-transform: uppercase;
