Adjusted image on News section on  homepage

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -691,6 +691,7 @@ h6 {font-size: 28px;}
   h2.wp-block-heading {
     margin-bottom: 70px!important;
     color: $blue;
+    font-size: 45px;
   }
   ul.wp-block-latest-posts {
     display: flex;
