--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1330,6 +1330,7 @@ footer.site-footer {
 .repeatable-intro {
   color: $blue;
   text-align: center;
+  padding-bottom: 30px;
   h2, p {
     color: $blue;
   }
@@ -1402,7 +1403,7 @@ a.link-arrow {
     padding: 20px;
     margin: 50px 0;
     @media screen and (min-width:1300px) {
-      margin-bottom: 70px;
+      margin-bottom: 110px;
     }
     @media screen and (max-width:960px) {
       width: 50%;
