--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -698,18 +698,33 @@ h6 {font-size: 28px;}
     justify-content: center;
     margin-left: -25px;
     margin-right: -25px;
+    @media screen and (max-width: 992px) {
+      flex-wrap: wrap;
+      padding: 0 20px;
+    }
     li {
       margin: 0 0;
-      padding: 20px 2vw;
+      padding: 20px 15px;
       text-align: center;
       position: relative;
+      @media screen and (min-width:1400px) {
+       padding-left: 25px;
+       padding-right: 25px; 
+      }
+      @media screen and (max-width: 992px) {
+        width: 50%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
       @media screen and (max-width: 820px) {
         margin-top: 40px;
+        margin-top: 0;
         width: 100%;
         &:first-child {
           margin-top: 0;
         }
       }
+      
     }
     .inside {
       background: $primary;
@@ -743,12 +758,16 @@ h6 {font-size: 28px;}
       justify-content: center;
       a {
         display: block;
-        width: 11vw;
+        width: 150px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         @media screen and (min-width:1600px) {
-          width: 13vw;
+          // width: 13vw;
+          width: 240px;
+        }
+        @media screen and (max-width: 992px) {
+          width: 200px;
         }
       }
       img.wp-post-image {
