Fixed container width on two-column layout

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -300,6 +300,11 @@ h6 {font-size: 28px;}
   }
 }
 
+body.home .wp-block-group.intro {
+  padding-top: 40px!important;
+  padding-bottom: 20px!important;
+}
+
 .rounded-images {
   padding-top: 50px;
   padding-bottom: 80px;
