Adjusted content images margins

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2581,6 +2581,7 @@ body.single-post {
   figure.wp-block-image.size-full {
     margin-left: 0;
     margin-right: 0;
+    margin-top: 0;
     margin-bottom: 2em;
   }
   figure.wp-block-gallery.columns-default {
