Created script to mimic the filter functionality of Tribe Event Filtering

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1314,6 +1314,7 @@ footer.site-footer {
 .repeatable-hero  {
   position: relative;
   min-height: 400px;
+  background: #ebebeb;
   @media screen and (max-width:820px) {
     min-height: 430px;
   }
