--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1910,27 +1910,26 @@ div.checklist {
 }
 
 .repeatable-twocol-text-block {
-  // justify-content: space-between;
-  // align-items: center;
   padding: 50px 20px;
   margin-bottom: 70px;
-  @media screen and (min-width:1400px) {
-    // padding-top: 5vw;
-    // padding-bottom: 6vw;
-  }
   .wrapper {
     max-width: 1360px;
     padding: 30px;
+    min-height: 300px;
     @media screen and (min-width:1600px) {
       padding: 40px;
     }
   }
   .flexwrap {
+    min-height: 230px;
     flex-wrap: wrap;
-    //align-items: center;
     justify-content: space-between;
+    position: relative;
   }
   &.half {
+    .flexwrap {
+      align-content: center;
+    }
     .textLeft, .textRight {
       width: 46%;
       @media screen and (max-width: 820px) {
@@ -1994,6 +1993,34 @@ div.checklist {
       max-width: 900px;
       width: 100%;
       margin: 0 auto;
+    }
+  }
+
+  &.hasVerticalDivider.half {
+    .flexwrap {
+      &:after {
+        content:"";
+        display: block;
+        width: 2px;
+        height: 90%;
+        background: $primary;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+      }
+      .fxcol {
+        padding: 0 5vw;
+      }
+    }
+    @media screen and (max-width: 820px) {
+      .flexwrap {
+        &:after {
+          width: 100%;
+          height: 2px;
+          top: 53%;
+        }
+      }
     }
   }
 
