Adjusted footer text container

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2026,6 +2026,11 @@ div.checklist {
 
 }
 
+body.page-id-477 {
+  .repeatable-twocol-text-block {
+    margin-bottom: 0;
+  }
+}
 
 
 body:not(.home) {
